# a51

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE-BSD  README.asc
a51/: 8051.inc  CMakeLists.txt  a.y  a51.h  a51.prj  amain.c  asm.c  bison.sim  cmdtab.c  cmdtab.h  err.c  findf.c  findf.h  generr.c  genobj.c  genobj.h  gentbl.c  genup.c  ident.c  ident.h  idtab.c  if.doc  lex.h  makefile.bc  minilex.c  misc.c  scan.c  scan.h  setbis.bat  str.c  xref.c
examples/: Makefile  mod1.a51  mod2.a51  simple.a51
include/a51/: obj51.h  objfmt.txt
include/common/: clist.h  config.h.in  global.h
include/common/bc-dos/: config.h
lib/common/: CMakeLists.txt  common.prj  debug.c  makefile.bc  misc.c
lib/port/: CMakeLists.txt  dirent.c  ltoa.c  stricmp.c
link51/: CMakeLists.txt  c_list.c  c_list.h  collect.c  collect.h  debug.c  err.c  err.h  global.h  link51.c  link51.h  link51.mak  makefile  makefile.bc  map.c  misc.c  misc.h  objfmt.txt  output.c  process.c  readrex.c  segments.c  symbols.c
mlink/: CMakeLists.txt  genbin.c  makefile.bc  mlink.c  mlink.h  obj51.h
objdump5/: CMakeLists.txt  collect.c  collect.h  objdump.c  t.c
src/: CMakeLists.txt  a.y  a51.h  a51.prj  a_tab.c  a_tab.h  amain.c  asm.c  asm.h  cmdtab.c  cmdtab.inc  config.h.in  debug.c  dirent.c  err.c  err.h  errmsg.txt  findf.c  generr.c  genobj.c  global.h  ident.c  idtab.c  list.h  makefile.bc  makefile.gcc  makefile.lin  makefile.vc  minilex.c  misc.c  misc.h  scan.c  str.c  uptab.inc  xref.c  xref.h
src/bc-dos/: config.h
src/mlink/: debug.c  genbin.c  global.h  makefile.gcc  makefile.vc  mlink.h
src/port/: dirent.h  strlwr.c  strupr.c
